<resources>
    <string name="app_name">PersonRank</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Update</string>

    <string name="navigation_common_stat">"Общая статистика"</string>
    <string name="navigation_daily_stat">Ежедневная статистика</string>
    <string name="navigation_dictionaries">Справочники</string>
    <string name="navigation_dict_persons">Личности</string>
    <string name="navigation_dict_keys">Ключевые слова</string>
    <string name="navigation_dict_sites">Cайты</string>

    <string name="site_list">Список сайтов</string>
    <string name="person_list">Список персон</string>
    <string name="keyword_list">Ключевые слова</string>
    <string name="common_stats">Общая статистика</string>
    <string name="daily_stats">Ежедневная статистика</string>

</resources>
